--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ocean Vibes</title>
+    <title>Solange</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div>🌊 Ocean Vibes</div>
+        <div> Solange</div>
         <ul>
             <li><a href="#home">Accueil</a></li>
             <li><a href="#about">À propos</a></li>
@@ -18,13 +18,27 @@
     </nav>
 
     <header id="home">
-        <h1>Bienvenue à Ocean Vibes</h1>
+        <h1>Solange</h1>
         <p>Plongez dans un univers marin et laissez-vous inspirer par la beauté des océans.</p>
+        <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                 viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                    <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                </defs>
+                <g class="parallax">
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                    <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                </g>
+            </svg>
+        </div>
     </header>
 
     <section id="about" class="about">
         <h2>À propos de nous</h2>
-        <p>Ocean Vibes est une plateforme dédiée aux amoureux de l'océan. Nous partageons des inspirations, des photos et des conseils pour préserver la vie marine.</p>
+        <p>Solangeest une plateforme dédiée aux amoureux de l'océan. Nous partageons des inspirations et des conseils pour préserver la vie marine.</p>
     </section>
 
     <section id="gallery" class="gallery">
@@ -36,7 +50,7 @@
     </section>
 
     <footer id="contact">
-        <p>&copy; 2024 Ocean Vibes - Tous droits réservés</p>
+        <p>🌊 2024 Solange - Pas mal la rivière</p>
         <p><a href="mailto:contact@oceanvibes.com">contact@oceanvibes.com</a></p>
     </footer>
 </body>
