--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <div> Solange</div>
-        <ul>
-            <li><a href="#home">Accueil</a></li>
-            <li><a href="#about">À propos</a></li>
-            <li><a href="#gallery">Galerie</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
+    <div id="menu-toggle" class="menu-toggle">☰</div>
+    <ul id="sidebar" class="sidebar">
+        <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
+        <li><a href="lyreco.html">Logo Finder</a></li>
+        <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
+        <li><a href="Credit.html">Crédits</a></li>
+    </ul>
     <header id="home">
-        <h1>Solange</h1>
+        <div class="logo">
+            <img src="SolangeText.svg" alt="Solange logo">
+        </div>
         <p>Plongez dans un univers marin et laissez-vous inspirer par la beauté des océans.</p>
         <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -27,7 +26,7 @@
                     <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
                 </defs>
                 <g class="parallax">
-                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
                     <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
                     <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
                     <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
@@ -38,7 +37,7 @@
 
     <section id="about" class="about">
         <h2>À propos de nous</h2>
-        <p>Solangeest une plateforme dédiée aux amoureux de l'océan. Nous partageons des inspirations et des conseils pour préserver la vie marine.</p>
+        <p>Solange est une plateforme dédiée aux amoureux de l'océan. Nous partageons des inspirations et des conseils pour préserver la vie marine.</p>
     </section>
 
     <section id="gallery" class="gallery">
@@ -53,5 +52,6 @@
         <p>🌊 2024 Solange - Pas mal la rivière</p>
         <p><a href="mailto:contact@oceanvibes.com">contact@oceanvibes.com</a></p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
