Contact et autre

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="menu-toggle" class="menu-toggle">☰</div>
     <ul id="sidebar" class="sidebar">
+        <li><a href="exemples/sea.html">Ocean</a></li>
         <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
         <li><a href="lyreco.html">Logo Finder</a></li>
         <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
@@ -41,16 +42,15 @@
     </section>
 
     <section id="gallery" class="gallery">
-        <h2 style="text-align:center;">Galerie</h2>
-        <img src="https://via.placeholder.com/200x150?text=Photo+1" alt="Photo océan 1">
-        <img src="https://via.placeholder.com/200x150?text=Photo+2" alt="Photo océan 2">
-        <img src="https://via.placeholder.com/200x150?text=Photo+3" alt="Photo océan 3">
-        <img src="https://via.placeholder.com/200x150?text=Photo+4" alt="Photo océan 4">
+        <img src="assets/baleine.jpg" alt="Photo océan 1">
+        <img src="assets/tortue.jpg" alt="Photo océan 2">
+        <img src="assets/orca.png" alt="Photo océan 3">
+        <img src="assets/requin.jpg" alt="Photo océan 4">
     </section>
 
     <footer id="contact">
         <p>🌊 2024 Solange - Pas mal la rivière</p>
-        <p><a href="mailto:contact@oceanvibes.com">contact@oceanvibes.com</a></p>
+        <p><a href="mailto:nbadin@et.esiea.fr, beaufils@et.esiea.fr, ebriand@et.esiea.fr, nguillard@et.esiea.fr, izard@et.esiea.fr, moisis@et.esiea.fr?subject=Journée%20de%20l'apéro">contact@Solange.com</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
