--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solange</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Solange.svg" type="image/svg+xml">
+    <link rel="icon" href="Solange.ico" type="image/x-icon">
+    <link rel="icon" href="Solange.png" type="image/png">
 </head>
 <body>
     <div id="menu-toggle" class="menu-toggle">☰</div>
@@ -42,9 +45,9 @@
     </section>
 
     <section id="gallery" class="gallery">
-        <img src="assets/baleine.jpg" alt="Photo océan 1">
+        <img src="assets/baleinier.jpg" alt="Photo océan 1">
         <img src="assets/tortue.jpg" alt="Photo océan 2">
-        <img src="assets/orca.png" alt="Photo océan 3">
+        <img src="assets/globicephale.jpg" alt="Photo océan 3">
         <img src="assets/requin.jpg" alt="Photo océan 4">
     </section>
 
