--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solange</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Solange.svg" type="image/svg+xml">
-    <link rel="icon" href="Solange.ico" type="image/x-icon">
-    <link rel="icon" href="Solange.png" type="image/png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="assets/Solange.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/Solange.ico" type="image/x-icon">
+    <link rel="icon" href="assets/Solange.png" type="image/png">
 </head>
 <body>
     <div id="menu-toggle" class="menu-toggle">☰</div>
     <ul id="sidebar" class="sidebar">
         <li><a href="exemples/sea.html">Ocean</a></li>
         <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
-        <li><a href="lyreco.html">Logo Finder</a></li>
         <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
-        <li><a href="Credit.html">Crédits</a></li>
+        <li><a href="credit.html">Crédits</a></li>
     </ul>
     <header id="home">
         <div class="logo">
-            <img src="SolangeText.svg" alt="Solange logo">
+            <img src="assets/SolangeText.svg" alt="Solange logo">
         </div>
         <p>Plongez dans un univers marin et laissez-vous inspirer par la beauté des océans.</p>
         <div>
@@ -55,6 +54,6 @@
         <p>🌊 2024 Solange - Pas mal la rivière</p>
         <p><a href="mailto:nbadin@et.esiea.fr, beaufils@et.esiea.fr, ebriand@et.esiea.fr, nguillard@et.esiea.fr, izard@et.esiea.fr, moisis@et.esiea.fr?subject=Journée%20de%20l'apéro">contact@Solange.com</a></p>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
