--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="menu-toggle" class="menu-toggle">☰</div>
     <ul id="sidebar" class="sidebar">
-        <li><a href="exemples/sea.html">Ocean</a></li>
+        <li><a href="sea.html">Ocean</a></li>
         <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
         <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
         <li><a href="credit.html">Crédits</a></li>
