--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Underwater Effect</title>
-    <link rel="stylesheet" href="credits.css">
+    <link rel="stylesheet" href="css/credits.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
@@ -54,8 +54,5 @@
 
         </div>
     </div>
-    <footer>
-        <p>&copy; 2023 Underwater Experience</p>
-    </footer>
 </body>
 </html>
