--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="sea.html">Ocean</a></li>
         <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
         <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
-        <li><a href="credit.html">Crédits</a></li>
+        <li><a href="credits.html">Crédits</a></li>
     </ul>
     <header id="home">
         <div class="logo">
