Push final accueil

--- a/credits.html
+++ b/credits.html
@@ -25,9 +25,7 @@
     <div id="menu-toggle" class="menu-toggle">☰</div>
     <ul id="sidebar" class="sidebar">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="sea.html">Ocean</a></li>
-        <li><a href="cookiecauchemar.html">Cookie Cauchemar</a></li>
-        <li><a href="TowerDefenseUbisoft.html">Ubisoft Tower Defense</a></li>
+        <li><a href="sea.html">Le corps Océan</a></li>
     </ul>
     <div>
         <div class="water">
