--- a/credits.html
+++ b/credits.html
@@ -8,14 +8,14 @@
     <script src="assets/js/lottie.min.js"></script>
     <style>
         html, body{
-            margin: 0; /* Remove default margin */
-            padding: 0; /* Remove default padding */
+            margin: 0; 
+            padding: 0; 
             width: 100%;
-            height: 100%; /* Ensure body takes full height */
+            height: 100%; 
             background-color: #000133;
         }
         #animContainer {
-            width: 100%; /* Full width */
+            width: 100%; 
             overflow: hidden;
         }
     </style>
