Good looking Sea

--- a/sea.html
+++ b/sea.html
@@ -9,45 +9,46 @@
 </head>
 <body class="fill-it">
     <canvas id="myCanvas"></canvas>
+    <div class="main-container container">
     <div class="grid-container">
         <div class="grid-item" id="lungs-card">
             <h2>Poumons</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Les océans sont les poumons de la Terre. Ils régulent l'atmosphère terrestre. Tout comme les poumons échangent l'oxygène et le dioxyde de carbone avec le sang, les océans absorbent le dioxyde de carbone de l'atmosphère et libèrent de l'oxygène grâce à la photosynthèse des algues.</p>
         </div>
         <div class="grid-item" id="virus-card">
-            <h2>Virus</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <h2>Virus & éléments étrangers</h2>
+            <p>Le plastique est le premier élément étranger auquel on peut penser. Avec le réchauffement climatique, des espèces se reproduisent énormément, menaçant parfois l'équilibre des écosystèmes.</p>
         </div>
         <div class="grid-item" id="brain-card">
             <h2>Cerveau</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Les écosystèmes marins, complexes, sont comparables au cerveau. Chaque écosystème fonctionne comme un réseau interconnecté où chaque espèce joue un rôle vital. Ces écosystèmes régulent les interactions biologiques et chimiques essentielles à la vie marine.</p>
         </div>
         <div class="grid-item" id="heart-card">
             <h2>Coeur</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Les courants marins sont comme le sang, ils circulent dans les océans. Ces courants transportent chaleur, nutriments et organismes marins sur de vastes distances, tout comme le cœur distribue l'oxygène et les nutriments aux cellules du corps. La santé de ces systèmes circulatoires est essentielle à la vie.</p>
         </div>
         <div class="grid-item" id="liver-card">
             <h2>Foie</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Cela fait écho aux processus naturels de filtration des eaux dans les zones humides ou par les coraux, qui purifient l'eau en éliminant les polluants et en maintenant la santé des habitats aquatiques. Ces mécanismes naturels sont cruciaux pour la survie des espèces marines.</p>
         </div>
         <div class="grid-item" id="intestines-card">
             <h2>Intestins</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Les sédiments marins peuvent être vus comme des intestins. Ils nourrissent les organismes benthiques. Les nutriments issus de la décomposition organique dans les sédiments soutiennent une multitude de formes de vie aquatique, tout comme notre système digestif soutient notre métabolisme.</p>
         </div>
         <div class="grid-item" id="kidneys-card">
             <h2>Reins</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>Ce processus est analogue au cycle de l'eau dans la nature, où l'eau s'évapore, se condense et retombe sous forme de précipitations peut faire penser aux reins. Les reins assurent que notre corps reste hydraté et équilibré, tout comme le cycle de l'eau maintient les écosystèmes en bonne santé.</p>
         </div>
         <div class="grid-item" id="bladder-card">
             <h2>Vessie</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>La vessie stocke l'urine jusqu'à son évacuation, semblable aux réservoirs d'eau qui accumulent les eaux pluviales avant leur redistribution dans les rivières ou les aquifères. Cette capacité de stockage est essentielle pour gérer les ressources en eau tant pour les humains que pour la nature.</p>
         </div>
         <div class="grid-item" id="stomach-card">
             <h2>Estomac</h2>
-            <p>akez dvim vzedmje mke mek vm"ef vmk" mealjb"ma</p>
+            <p>L'estomac est responsable de la digestion des aliments, tout comme les océans nourrissent une multitude d'organismes grâce à leurs nutriments dissous. Les océans agissent comme un immense réservoir alimentaire pour la vie marine, fournissant énergie et nutriments nécessaires à la survie des espèces.</p>
         </div>
     </div>
-    <div class="container">
+    <div class="container body-container">
         <!-- Carré fixe avec image1 et image2 -->
         <div class="body-square" id="bodySquare">
             <img src="assets/body.svg" alt="Corps de la planète" class="bodyimg" id="bodyimg">
@@ -63,6 +64,7 @@
         </div>
         <!-- Carré mobile -->
         <div class="movable-square" id="movableSquare"></div>
+    </div>
     </div>
     <script src="js/ShaderToyLite.js"></script>
     <script src="js/shader.js"></script>
