--- a/credits.html
+++ b/credits.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Underwater Effect</title>
     <link rel="stylesheet" href="css/credits.css">
+    <link rel="stylesheet" href="css/mouse-fish.css">
     <script src="assets/js/lottie.min.js"></script>
     <style>
         html, body{
@@ -48,6 +49,9 @@
         <div class="underwater">
         </div>
     </div>
+    <div id="fish-container" style="z-index: 1000;">
+    </div>
+    <script src="js/mouse-fish.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
